[package]
name = "arbutus"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Arbutus Trees"
homepage = "https://github.com/boondocklabs/arbutus"
repository = "https://github.com/boondocklabs/arbutus"
readme = "README.md"

[dependencies]
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["js", "v4"] }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }

[dev-dependencies]
tracing = "0.1.40"
tracing-test = "0.2.5"
